--- a/src/base/esos/SConscript
+++ b/src/base/esos/SConscript
@@ -7,9 +7,6 @@ targetenv : Environment
 
 buildenv = targetenv.Clone()
 buildenv.Append(
-    CFLAGS = [
-        '-D_esaul_libk=1'
-    ],
     CPPPATH = [ 
         buildenv.Dir('.').srcnode(),
         buildenv['PROJECTDIR'].Dir('src/base/sdk')
@@ -36,13 +33,13 @@ esos_sources = [
 
 if targetenv['arch'] == 'ia32':
     esos_sources.append('ia32/entry.asm')
-    esos_sources.append('ia32/crti.asm')
-    esos_sources.append('ia32/crtn.asm')
+    #esos_sources.append('ia32/crti.asm')
+    #esos_sources.append('ia32/crtn.asm')
 
 esos_objects = buildenv.Object(esos_sources)
 entry_object = esos_objects.pop(FindIndex(esos_objects, lambda item: IsFileName(item, 'entry.o')))
-crti_object = esos_objects.pop(FindIndex(esos_objects, lambda item: IsFileName(item, 'crti.o')))
-crtn_object = esos_objects.pop(FindIndex(esos_objects, lambda item: IsFileName(item, 'crtn.o')))
+#crti_object = esos_objects.pop(FindIndex(esos_objects, lambda item: IsFileName(item, 'crti.o')))
+#crtn_object = esos_objects.pop(FindIndex(esos_objects, lambda item: IsFileName(item, 'crtn.o')))
 
 Import('libc')  #type:ignore
 static_libs = [
@@ -51,12 +48,12 @@ static_libs = [
 
 esos_objects = [
     entry_object,
-    crti_object,
-    os.path.join(buildenv['LIBGCC_TOOLCHAIN'], 'crtbegin.o'),
+    #crti_object,
+    #os.path.join(buildenv['LIBGCC_TOOLCHAIN'], 'crtbegin.o'),
     *esos_objects,
     *static_libs,
-    os.path.join(buildenv['LIBGCC_TOOLCHAIN'], 'crtend.o'),
-    crtn_object  
+    #os.path.join(buildenv['LIBGCC_TOOLCHAIN'], 'crtend.o'),
+    #crtn_object  
 ]
 
 kernel = buildenv.Program('chkernel.elf', esos_objects)
