updated all the docs

--- a/src/base/esos/SConscript
+++ b/src/base/esos/SConscript
@@ -1,6 +1,6 @@
 import os
 from SCons.Environment import Environment
-from tools.utility import FindIndex, IsFileName
+from build.utility import FindIndex, IsFileName
 
 Import("targetenv") #type:ignore
 targetenv : Environment
