--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ publish/sysroot/
 publish/skylight.iso
 build/__pycache__
 tools/__pycache__
+toolchain/toolchain-binaries/
+toolchain/build-binutils/*.tar.gz
+toolchain/build-binutils/binutils*
 .ninja_log
 .sconsign.dblite
 a.out
