Toolchain Rework: big commit (read description) Does the following things: 1. Adds a new libc function called sysinfo which returns a system info struct 2. Makes the kernel read and display the build string at startup 3. Adds a build number bump script 4. Integrates build number bumps into the toolchain

--- a/src/base/libc/SConscript
+++ b/src/base/libc/SConscript
@@ -16,7 +16,8 @@ libc_sources = [
     'memory/memcpy.c',
     'memory/memmove.c',
     'memory/memset.c',
-    'string/strlen.c'
+    'string/strlen.c',
+    'system/sysinfo.c'
 ]
 
 libc_objects = buildenv.Object(libc_sources)
