Toolchain Rework: multiple things, read description 1. Remove src/base/sdk/system/osver.h from tree (now automatically generated) 2. Add support for src/base/sdk/system/osver.h not being there during build, in this case build number is set to 1 3. Use typedef struct instead of struct in kernel API related to build numbers 4. Use easier to read variable names in src/base/sdk/system/osver.h

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ publish/sysroot/
 publish/skylight.iso
 build/__pycache__
 tools/__pycache__
+src/base/sdk/system/osver.h
 toolchain/
 .ninja_log
 .sconsign.dblite
