--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "tty.h": "c",
         "cdefs.h": "c",
         "limits.h": "c",
-        "stddef.h": "c"
+        "stddef.h": "c",
+        "klog.h": "c"
     }
 }
