Kernel: Detect FPU, just making this for the future of the project

--- a/src/crt/libk/SConscript
+++ b/src/crt/libk/SConscript
@@ -18,6 +18,8 @@ libk_sources = [
     'io/inx.c',
     'io/outx.c',
     'io/wait.c',
+    'math/detectfpu.asm',
+    'math/fpu.c',
     'terminal/cursor.c',
     'terminal/tty.c',
     'terminal/vga.c',
