--- a/publish/intrim/grub.cfg
+++ b/publish/intrim/grub.cfg
@@ -1,3 +1,7 @@
-menuentry "Codename \"Esaul\" Operating System" {
+menuentry "Codename \"Esaul\" Operating System (debug kernel)" {
 	multiboot /boot/chkernel.elf
+}
+
+menuentry "Codename \"Esaul\" Operating System (release kernel)" {
+	multiboot /boot/ekernel.elf
 }
