updated scripts, removed chkernel.elf

--- a/publish/intrim/grub.cfg
+++ b/publish/intrim/grub.cfg
@@ -1,7 +1,3 @@
-menuentry "Codename \"Esaul\" Operating System (debug kernel)" {
-	multiboot /boot/chkernel.elf
-}
-
-menuentry "Codename \"Esaul\" Operating System (release kernel)" {
+menuentry "Codename \"Esaul\" Operating System" {
 	multiboot /boot/ekernel.elf
 }
